crates/rspack_error/tests/fixtures/html_syntax_error/fixtures__html_syntax_error.snap
---
source: crates/rspack_error/tests/fixtures.rs
assertion_line: 29
expression: html_syntax_error
---
error: HTML parsing error
  ┌─ tests/fixtures/html_syntax_error/index.html:1:1
  │
1 │ <head>
  │ ^^^^^^ Start tag seen without seeing a doctype firs, expected "<!DOCTYPE html>"

error: HTML parsing error
  ┌─ tests/fixtures/html_syntax_error/index.html:2:3
  │
2 │   </something>
  │   ^^^^^^^^^^^^ Stray end tag "something"


